--- a/client/src/components/ChatUser/ChatUser.css
+++ b/client/src/components/ChatUser/ChatUser.css
@@ -156,4 +156,8 @@ article.chat footer label button {
     article.chat .messages {
         height: 65vh;
     }
+    article.chat footer {
+        width: 90% !important;
+        margin: auto;
+    }
 }
