--- a/client/src/components/Chart/Chart.css
+++ b/client/src/components/Chart/Chart.css
@@ -1,7 +1,7 @@
 .chart-card {
     background-color: #fff;
     border-radius: 16px;
-    padding: 20px;
+    padding: 10px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
     font-family: "Inter", sans-serif;
     border: 1px solid #edf2f7;
@@ -51,6 +51,7 @@ body.dark .chart-card .bar {
     padding: 4px 10px;
     cursor: pointer;
     transition: background 0.2s ease;
+    display: flex;
 }
 
 .dropdown:hover {
@@ -70,4 +71,10 @@ body.dark .chart-card .bar {
     padding: 4px 10px;
     border-radius: 8px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+}
+
+@media screen and (max-width: 400px) {
+    .chart-header {
+        flex-direction: column;
+    }
 }
