--- a/client/src/pages/Wallet/Wallet.css
+++ b/client/src/pages/Wallet/Wallet.css
@@ -1,3 +1,11 @@
-.walletArticle {
+article.walletArticle {
     padding: 10px;
+    height: 91.7vh;
+    overflow-y: auto;
+}
+
+article.walletArticle::webkit
+
+article.walletArticle {
+    width: 65%;
 }
