--- a/client/src/components/Chart/Chart.css
+++ b/client/src/components/Chart/Chart.css
@@ -2,14 +2,17 @@
     background-color: #fff;
     border-radius: 16px;
     padding: 10px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
-    font-family: "Inter", sans-serif;
     border: 1px solid #edf2f7;
+    margin-top: 20px;
 }
 
 body.dark .chart-card {
     border: 1px solid #1f1f1f;
     background-color: #1f1f1f;
+}
+
+.recharts-surface {
+    outline: none;
 }
 
 .chart-card .bar {
