--- a/client/src/components/Currency/Currency.css
+++ b/client/src/components/Currency/Currency.css
@@ -1,3 +1,15 @@
+.currency {
+    width: 50%;
+    border: 0.5px solid #edf2f7;
+    border-radius: 15px;
+    padding: 10px;
+}
+
+body.dark .currency {
+    border: 0.5px solid #1f1f1f;
+    background: #1f1f1f;
+}
+
 .currency .flags img {
     width: 50px;
     height: 50px;
