--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,7 +16,6 @@
 body {
   margin: 0;
   padding: 0;
-  min-height: 100vh;
 }
 
 * {
@@ -26,7 +25,7 @@ body {
 }
 
 body.light {
-  background-color: #f5f5f5;
+  background-color: #fff;
   color: #121212;
 }
 
