--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -2,7 +2,11 @@
     width: 100%;
     box-shadow: 0 18px 28px #191c321a;
     padding: 10px;
-    border-radius: 10px;
+    border-radius: 15px;
+}
+
+body.dark .creditCard {
+    background: #1f1f1f;
 }
 
 .creditCard .cardTitle {
@@ -21,4 +25,72 @@
 
 .creditCard .card {
     background: #141416;
+    padding: 25px;
+    color: white;
+    border-radius: 25px;
+}
+
+.creditCard .card h4 {
+    margin-bottom: 0;
+    margin-top: 25px;
+}
+
+.creditCard .card header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.creditCard .card header button {
+    background: none;
+    border: none;
+    outline: none;
+    rotate: 90deg;
+}
+
+.creditCard .card .cardNumber {
+    margin-top: 15px;
+    display: flex;
+    gap: 15px;
+    font-weight: 600;
+}
+
+.creditCard .details {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    padding: 15px;
+}
+
+.creditCard .details div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.creditCard .details div button:hover {
+    background: #edf2f7;
+    cursor: pointer;
+}
+
+.creditCard .details div button {
+    width: 50px;
+    height: 50px;
+    background: none;
+    border: 1px solid #edf2f7;
+    border-radius: 10px;
+    transition: 100ms;
+}
+
+.creditCard .details div p {
+    font-size: 14px;
+}
+
+@media screen and (max-width: 991px) {
+    article.walletArticle .wallet {
+        width: 100%;
+    }
+    article.walletArticle {
+        padding-bottom: 78px !important;
+    }
 }
