--- a/client/src/components/ChatUser/ChatUser.css
+++ b/client/src/components/ChatUser/ChatUser.css
@@ -1,6 +1,6 @@
 article.chat {
   width: 100%;
-  background: #f5f5f5;
+  /* background: #f5f5f5; */
 }
 
 body.dark article.chat {
@@ -143,6 +143,10 @@ article.chat footer label input {
   outline: none;
   border: none;
   background: none;
+}
+
+body.dark article.chat footer label input {
+  color: white;
 }
 
 article.chat footer label button {
