--- a/client/src/components/Sidebar/Sidebar.css
+++ b/client/src/components/Sidebar/Sidebar.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'PoppinsLight';
+  font-family: "PoppinsLight";
   src: url(../../../assets/font/Poppins-Light.woff);
 }
 
@@ -51,37 +51,70 @@ aside header ul li a {
   text-decoration: none;
   padding: 10px;
   border-radius: 10px;
-  font-family: 'PoppinsLight';
+  font-family: "PoppinsLight";
   gap: 10px;
   color: black;
   transition: all 100ms ease;
 }
 
-aside header ul li a:hover {
+aside header ul li > a:hover {
   background: #f5f5f5;
 }
 
-aside.active header ul li a:hover {
+aside.active header ul li > a:hover {
   background-color: #2d2d2d;
 }
 
-aside header ul li a.active {
+aside header ul li > a.active {
   background-color: #1f1f1f;
   color: #ffffff;
 }
 
-aside.active header ul li a.active {
+aside.active header ul li > a.active {
   background-color: #444444;
   color: #ffffff;
 }
 
-aside header ul li a.dark {
+aside header ul li > a.dark {
   color: #ffffff;
 }
 
-aside header ul li a.white {
+aside header ul li > a.white {
   background: white;
   color: #ffffff;
+}
+
+aside header ul li .activityBids {
+  border-left: 1px solid black;
+  margin: 10px;
+  animation: transform 200ms linear;
+}
+
+@keyframes transform {
+  from {
+    transform: translateY(10px);
+  }
+  to {
+    transform: translateY(0px);
+  }
+}
+
+body.dark aside header ul li .activityBids {
+  border-left: 1px solid white;
+}
+
+aside header ul li .activityBids a {
+  padding: 10px;
+  color: black;
+  margin: 5px 0;
+}
+
+aside header ul li .activityBids a.active {
+  font-weight: 700;
+}
+
+body.dark aside header ul li .activityBids a {
+  color: white;
 }
 
 aside footer {
@@ -108,7 +141,7 @@ aside footer ul li a {
   padding: 10px;
   border-radius: 10px;
   color: #111111;
-  font-family: 'PoppinsLight';
+  font-family: "PoppinsLight";
   gap: 10px;
   transition: all 150ms ease;
 }
