--- a/client/src/components/Collection/Collection.css
+++ b/client/src/components/Collection/Collection.css
@@ -12,6 +12,7 @@ article.collection header {
 
 article.collection header label {
     display: flex;
+    align-items: center;
     border: 1px solid #141416;
     padding: 5px 7px;
     border-radius: 10px;
@@ -33,6 +34,7 @@ article.collection header .buttons button {
     display: flex;
     align-items: center;
     gap: 10px;
+    padding: 10px;
 }
 
 body.dark article.collection header .buttons button {
@@ -100,13 +102,13 @@ article.collection .custom-table th {
     color: #1f1f1f;
 }
 
-div.collection {
+article.collection div.collection {
     display: flex;
     align-items: center;
     gap: 12px;
 }
 
-div.collection img {
+article.collection div.collection img {
     width: 40px;
     height: 40px;
     border-radius: 50%;
