--- a/client/src/components/Collection/Collection.css
+++ b/client/src/components/Collection/Collection.css
@@ -91,6 +91,19 @@ article.collection .custom-table td {
     border-bottom: 1px solid #e5e7eb;
     font-size: 14px;
     white-space: nowrap;
+    cursor: pointer;
+}
+
+article.collection .custom-table tbody tr:hover {
+    background: #e5e7eb;
+}
+
+body.dark article.collection .custom-table tbody tr:hover {
+    background: #1f1f1f;
+}
+
+body.dark article.collection .custom-table td {
+    border-bottom: 1px solid #1f1f1f;
 }
 
 article.collection .custom-table th {
@@ -98,10 +111,6 @@ article.collection .custom-table th {
     padding: 12px 16px;
     font-size: 14px;
     white-space: nowrap;
-}
-
-article.collection .custom-table td {
-    cursor: pointer;
 }
 
 body.dark article .custom-table th {
