--- a/client/src/components/BestSellers/BestSellers.css
+++ b/client/src/components/BestSellers/BestSellers.css
@@ -1,4 +1,4 @@
-.bestSellersList {
+article.bestSellersList {
   width: 100%;
   border-radius: 25px;
   padding: 20px;
@@ -6,7 +6,7 @@
   border: 1px solid #edf2f7;
 }
 
-.bestSellersList header button {
+article.bestSellersList header button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,12 +16,12 @@
   background: none;
 }
 
-.bestSellersList.active {
+article.bestSellersList.active {
   background: #1f1f1f;
   border: 1px solid transparent;
 }
 
-.bestSellersList header h3 {
+article.bestSellersList header h3 {
   margin: 0;
 }
 
@@ -46,6 +46,7 @@
   display: flex;
   flex-direction: column;
   font-weight: 400;
+  margin: 16px 0;
 }
 
 .users_content .user_id .user_text p span {
